# SunflowerSpaniel

./: .gitignore  CMakeLists.txt  README.md  Report Sunflower Spaniel.docx  imgui.ini
Diagrams/: Diagrams.pptx
Diagrams/htdocs/: graph.dot
cmake/: FindBox2D.cmake  FindGLEW.cmake  FindLibNoise.cmake  FindSDL2_ttf.cmake  FindlibFalconLatinum.cmake
include/Falcon/2D/: GLTexture.h  Sprite.h  TileSheet.h  Vertex.h  picoPNG.h
include/Falcon/2D/Camera/: Camera2D.h
include/Falcon/2D/DebugRenderer/: DebugRenderer.h
include/Falcon/2D/ImageLoader/: ImageLoader.h
include/Falcon/2D/Lights/: BasicLight.h
include/Falcon/2D/Particles/: ParticleBatch.h  ParticleSystem.h
include/Falcon/2D/SpriteBatch/: SpriteBatch.h
include/Falcon/2D/SpriteFont/: SpriteFont.h
include/Falcon/Audio/: AudioEngine.h
include/Falcon/Errors/: Errors.h
include/Falcon/GLSL/: ShaderProgram.h
include/Falcon/GUI/: GUI.h
include/Falcon/GameIntefaces/: IGameScreen.h  IMainGame.h  ScreenList.h
include/Falcon/Init/: Falcon.h  Game.h
include/Falcon/InputOutput/: IOManager.h  InputManager.h
include/Falcon/Object/: Projectile.h
include/Falcon/ResourceManager/: ResourceManager.h  TextureCache.h
include/Falcon/Shaders/: lightShading.frag  lightShading.vert  textureShading.frag  textureShading.vert
include/Falcon/States/: StateManager.h
include/Falcon/Timing/: Timing.h
include/Falcon/Window/: Window.h
include/ImGUI/: imgui_impl_sdl.cpp
media/Dialogues/: RedMonk.xml
media/Objects/: AppleFruit.xml  BlueINN.xml  BlueMonk.xml  Box.xml  Circle.xml  DogPlayer.xml  Evergreen.xml  GreenINN.xml  GreenMonk.xml  HumanPlayer.xml  MenuDog.xml  MenuFire.xml  MenuMan.xml  MenuScreen.xml  Monk.xml  Oak.xml  Player.xml  RedINN.xml  RedMonk.xml  StrangeFruit.xml  WoodItem.xml
src/: AnimationComponent.cpp  AnimationComponent.h  App.cpp  App.h  BodyComponent.cpp  BodyComponent.h  Box.cpp  Box.h  Circle.cpp  Circle.h  CollisionComponent.cpp  CollisionComponent.h  Component.h  DirectionalAnimationComponent.cpp  DirectionalAnimationComponent.h  EvergreenTree.cpp  EvergreenTree.h  GameObject.cpp  GameObject.h  GameplayScreen.cpp  GameplayScreen.h  MainMenuScreen.cpp  MainMenuScreen.h  Map.cpp  Map.h  OakTree.cpp  OakTree.h  ObjectFactory.cpp  ObjectFactory.h  Player.cpp  Player.h  PlayerInputComponent.cpp  PlayerInputComponent.h  SpriteComponent.cpp  SpriteComponent.h  Tree.cpp  Tree.h  main.cpp
src/Application/: App.h
src/Components/: AnimationComponent.cpp  AnimationComponent.h  BodyComponent.cpp  BodyComponent.h  CollisionComponent.cpp  CollisionComponent.h  Component.h  DialogueComponent.cpp  DialogueComponent.h  DirectionalAnimationComponent.cpp  DirectionalAnimationComponent.h  DogAIComponent.cpp  DogAIComponent.h  HumanAIComponent.cpp  HumanAIComponent.h  InteractiveComponent.cpp  InteractiveComponent.h  InventoryComponent.cpp  InventoryComponent.h  NeedsComponent.cpp  NeedsComponent.h  PlayerInputComponent.cpp  PlayerInputComponent.h  SensorComponent.cpp  SensorComponent.h  SpawnObjectComponent.cpp  SpawnObjectComponent.h  SpriteComponent.cpp  SpriteComponent.h
src/FSM/: State.h  StateManager.h
src/GUI/: DebugGUI.cpp  DebugGUI.h  InventoryGUI.cpp  InventoryGUI.h
src/Map/: Map.cpp  Map.h
src/Messaging/: ContactListener.h  MessageManager.cpp  MessageManager.h  Messages.h  Telegram.h
src/ObjectFactory/: GameObject.cpp  GameObject.h  ObjectFactory.cpp  ObjectFactory.h
src/Pathfinding/: SearchAlghorithms.cpp  SearchAlghorithms.h
src/Screens/: GameplayScreen.cpp  GameplayScreen.h  MainMenuScreen.cpp  MainMenuScreen.h  ScreenIndices.h
src/States/: DogOwnedStates.cpp  DogOwnedStates.h  HumanOwnedStates.cpp  HumanOwnedStates.h
